# lsat-lr-ptest

./: .gitignore  LICENSE  README.md  config.py  config.yaml  fix_json.py  init_project.py  lsat_scraping.ipynb  pyproject.toml  run.py  setup.py
app/: server.py
app/static/css/: style.css
app/templates/: index.html
clients/: gemini_client.py
db/: models.py  schema.py
encoder/: encoder.py
llm/: query_llm.py
src/lsat_lr_ptest/: config.py
src/lsat_lr_ptest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lsat_lr_ptest/app/: models.py  server.py
src/lsat_lr_ptest/app/templates/: index.html
src/lsat_lr_ptest/clients/: __init__.py  gemini_client.py
src/lsat_lr_ptest/db/: duckdb_loader.py  loader.py  postgres_loader.py  schema.py
src/lsat_lr_ptest/encoder/: __init__.py  encoder.py
src/lsat_lr_ptest/vector_index/: __init__.py  build_index.py  index.py
tests/: conftest.py  test_config.py  test_duckdb_loader.py  test_encoder.py  test_gemini_client.py  test_server.py  test_vector_index.py
vector_index/: build_index.py
