[project]
name = "lsat-lr-ptest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.2",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "google-genai>=1.12.1",
    "notebook>=7.3.2",
    "numpy>=2.2.5",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.1",
]
