[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsat-lr-ptest"
version = "0.1.0"
description = "VSA retrieval system for Logical Reasoning LSAT practice tests with a FastAPI + Jinja webapp"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sam Newman", email = "snewman.aa@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.2",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "google-genai>=1.12.1",
    "loguru>=0.7.3",
    "notebook>=7.3.2",
    "numpy>=2.2.5",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pydantic-settings-yaml>=0.2.0",
    "pytest>=8.3.5",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.1",
]
